# WaveSynth

./: .gitignore  Cargo.toml  plot.py
src/: .lib.rs.swp  complex.rs  lib.rs  main.rs
