[package]
name = "fft"
version = "0.1.0"
authors = ["Victor Suriel <victorv.suriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
structopt = { version = "0.3", default-features = false }
